--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Classroom Scheduler - Python Dependencies
+# Install with: pip install -r requirements.txt
+
 # Core dependencies
 pulp>=2.7.0
 pandas>=2.0.0
